@@ -9,6 +9,8 @@ Moqui Framework 1.3.1 is a minor new feature and bug fix release.
 
 New Features:
 
+- Added econdition.@or-null attribute to make the condition an or between
+  the specified condition and null
 
 Bug Fixes:
 
